Started Python notebook
Co-authored-by: imranh02 <imranh02@users.noreply.github.com>
Co-authored-by: etlopez <etlopez@users.noreply.github.com>
Co-authored-by: Bidhan Devkota <bibeast123@users.noreply.github.com>

--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -2,18 +2,178 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d7361e94",
+   "execution_count": null,
+   "id": "20f9ee62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# March Madness Match Predictor"
+    "#cleaning drop all records of date due to many missing dates and drop "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "069c77d0",
+   "metadata": {},
+   "source": [
+    "### 2023 Conference Data Exploration"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a736cf4b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# March Madness Match Predictor\n",
+    "Authors: Peter Chacko (pic282), Imran Hussein (ih5296) Ethan Lopez (esl834),\n",
+    "Bidhan Devkota (bd25229)\n",
+    "\n",
+    "## Introduction\n",
+    "What is the machine learning problem you are trying to solve:\n",
+    "\n",
+    "Each year, the NCAA Men's College Basketball tournament (March Madness) gathers excitement and speculation from fans. Both casual and hard-core basketball fans compete to predict the outcome of each match, which frequently results in upsets. Our machine learning project aims to predict the outcome of a March Madness matchup using the data in the Kaggle.\n",
+    " \n",
+    "Why does the problem matter?\n",
+    " \n",
+    " Every year, thousands of people submit their tournament bracket predictions toof our predictive model could be used for creating bracket challenges as basketball fans compete against each other in predicting the outcomes of each  contests for chances to win big prizes and bragging rights. At this point it has become college basketball culture and people take it very seriously. From the casual perspective, where people pick winners based on their favorite mascot, to more serious analytical perspectives where people leverage statistical patterns - we thought it would be interesting to take a machine learning approach. \n",
+    " \n",
+    "  What could the results of your predictive model be used for?\n",
+    "\n",
+    "  Sports betting == Winning big\n",
+    "\n",
+    "  The results \n",
+    "  \n",
+    "Why would we want to be able to predict the thing you’re trying to predict? \n",
+    "\n",
+    "  Purely entertainment. \n",
+    "   \n",
+    "Then describe the dataset that you will use to tackle this problem.\n",
+    "\n",
+    "\n",
+    "- 2023 Conference Data.csv\n",
+    "  - This dataset features the conferences and their stats from the 2022 - 2023 season. All of the stats given represent the average stats of the conference throughout the entire season including the conference tournaments. It also features how well each conference did in the tournament by featuring how many teams in that conference made it to the specific rounds as well.\n",
+    "  - Columns:\n",
+    "    - YEAR: The year where the data is pulled from. In this case, the year 2023 represents the 2022 - 2023 Division I college\n",
+    "    - B ADJ EM: Estimates how many points a conference would outscore the average Division I basketball team by over the course of 100\n",
+    "    - B ADJ O: Estimates how many points a conference would score against the average Division I basketball offense by over the\n",
+    "    - B ADJ D: Estimates how many points a conference would allow against the average Division I basketball defense by over the\n",
+    "    - BARTHAG: Power Rating (Chance of beating the average Division I basketball team).\n",
+    "    - WAB: The expected winning percentage for an average bubble team in each game of a team's schedule subtracted from\n",
+    "    - CONFERENCE NUMBER: Number to identify the conference.\n",
+    "- 2023 Game Data.csv\n",
+    "  - This dataset features several potential matchups for the 2023 tournament. It includes all First Round matchups, common Second Round matchups, and common Sweet 16 matchups. This dataset was created to predict the results of these specific matchups in my March Madness notebook. Every two rows represent a matchup. For example, the first two rows (Alabama and Grambling) represent a matchup between the two teams. The subsequent rows (Alabama and Howard) represent a matchup between another two teams and so on. All of the stats given represent the average stats of the team throughout the entire season including their conference tournament.\n",
+    "  - Columns:\n",
+    "    - YEAR\n",
+    "    - SEED\n",
+    "    - TEAM\n",
+    "    - TEAM ROUND\n",
+    "    - CURRENT ROUND\n",
+    "    - KENPOM ADJUSTED EFFICIENCY\n",
+    "    - KENPOM ADJUSTED OFFENSE\n",
+    "    - KENPOM ADJUSTED DEFENSE\n",
+    "    - KENPOM ADJUSTED TEMPO\n",
+    "    - BARTTORVIK ADJUSTED EFFICIENCY\n",
+    "    - BARTTORVIK ADJUSTED OFFENSE\n",
+    "    - BARTTORVIK ADJUSTED DEFENSE\n",
+    "    - BARTHAG\n",
+    "    - ELITE SOS\n",
+    "    - BARTTORVIK ADJUSTED TEMPO\n",
+    "    - 2PT %\n",
+    "    - 3PT %\n",
+    "    - FREE THROW %\n",
+    "    - EFG %\n",
+    "    - FREE THROW RATE\n",
+    "    - 3PT RATE\n",
+    "    - ASSIST %\n",
+    "    - OFFENSIVE REBOUND %\n",
+    "    - DEFENSIVE REBOUND %\n",
+    "    - BLOCK %\n",
+    "    - TURNOVER %\n",
+    "    - 2PT % DEFENSE\n",
+    "    - 3PT % DEFENSE\n",
+    "    - FREE THROW % DEFENSE\n",
+    "    - EFG % DEFENSE\n",
+    "    - FREE THROW RATE DEFENSE\n",
+    "    - 3PT RATE DEFENSE\n",
+    "    - OP ASSIST %\n",
+    "    - OP O REB %\n",
+    "    - OP D REB %\n",
+    "    - BLOCKED %\n",
+    "    - TURNOVER % DEFENSE\n",
+    "    - WINS ABOVE BUBBLE\n",
+    "    - WIN %\n",
+    "    - POINTS PER POSSESSION OFFENSE\n",
+    "    - POINTS PER POSSESSION DEFENSE\n",
+    "    - TEAM\n",
+    "\n",
+    "- 2023 Tournament Data.csv\n",
+    "  -This dataset features the teams and their stats for the 2023 tournament. All of the stats given represent the average stats of the team throughout the entire season including their conference tournament.\n",
+    "\n",
+    "\n",
+    "- 2023 Tournament Trends.csv\n",
+    "  - This dataset features the teams and some specific stats for the 2023 tournament teams. All of the stats given represent the average stats of the team throughout the entire season including their conference tournament. The Points Per Game, Win % (Close Games), Away Win %, Neutral Win %, Away - Neutral Win %, and Scoring Margin stats pertain to the 2023 teams that are the top 11 seeds. The BADJ O Rank Difference and BADJ D Rank Difference pertain to the 2023 teams that have a differential of 30 or greater for offense / defense. The TOV % and TOV % Rank pertain to the 2023 teams that have a TOV % greater than or equal to 18 %. The 3PT % and 3PT % Defense pertain to the 2023 teams that shoot 33 % or below from 3.\n",
+    "  \n",
+    "- Game Data.csv\n",
+    "  - This dataset features the boxscores of all games since 2008 (including 2023). This includes the non-conference games, the conference games, the conference tournament games, and the national tournament games.\n",
+    "\n",
+    "- Tournament Conference Data.csv\n",
+    "  - This dataset features the conferences and their stats from all tournaments since 2008. All of the stats given represent the average stats of the conference throughout the entire season including the conference tournaments. It also features how well each conference did in the tournament by featuring how many teams in that conference made it to the specific rounds as well.\n",
+    "\n",
+    "- Tournament Game Data.csv\n",
+    "  - \n",
+    "\n",
+    "   \n",
+    "  - This dataset features several potential matchups for the 2023 tournament. It includes all First Round matchups, common Second Round matchups, and common Sweet 16 matchups. This dataset was created to predict the results of these specific matchups in my March Madness notebook. Every two rows represent a matchup. For example, the first two rows (Alabama and Grambling) represent a matchup between the two teams. The subsequent rows (Alabama and Howard) represent a matchup between another two teams and so on. All of the stats given represent the average stats of the team throughout the entire season including their conference tournament.\n",
+    "  \n",
+    "  \n",
+    "-Tournament Game Data.csv\n",
+    "  -This dataset features several potential matchups for past tournaments since 2008. It includes all First Round matchups, common Second Round matchups, and common Sweet 16 matchups. This dataset was created to predict the results of these specific matchups in my March Madness notebook. Every two rows represent a matchup. For example, the first two rows (Gonzaga and Georgia St.) represent a matchup between the two teams. The subsequent rows (Boise St. and Memphis) represent a matchup between another two teams and so on. All of the stats given represent the average stats of the team throughout the entire season including their conference tournament. \n",
+    "tournament_game_data = pd.read_csv(\"data/Tournament Game Data.csv\", na_values=[r'?'])\n",
+    "print(\"Tournament Game Data Null values:\")\n",
+    "print(tournament_game_data.isnull().sum.max())\n",
+    "#cleaning drop all records of date due to many missing dates and drop \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
+    "# Data Prep\n",
+    "\n",
+    "\n",
+    "conference_data_2023 = pd.read_csv(\"data/2023 Conference Data.csv\", na_values=[r'?'])\n",
+    "print(\"Conference Data 2023 Null values:\")\n",
+    "print(conference_data_2023.isnull().sum().max())\n",
+    "\n",
+    "game_data_2023 = pd.read_csv(\"data/2023 Game Data.csv\", na_values=[r'?'])\n",
+    "print(\"Game Data 2023 Null values:\")\n",
+    "print(game_data_2023.isnull().sum().max())\n",
+    "\n",
+    "tournament_data_2023 = pd.read_csv(\"data/2023 Tournament Data.csv\", na_values=[r'?'])\n",
+    "print(\"Tournament Data 2023 Null values:\")\n",
+    "print(tournament_data_2023.isnull().sum().mmax())\n",
+    "\n",
+    "\n",
+    "game_data = pd.read_csv(\"data/Game Data.csv\", na_values=[r'?'])\n",
+    "print(\"Null values:\")\n",
+    "print(game_data.isnull().sum())\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 2023 Conference Data Exploration\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46aa4097",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "854cf074",
+   "id": "7b6939d0",
    "metadata": {},
    "outputs": [],
    "source": []
