everything run, has accuracies and best parameters

--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -852,44 +852,46 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "389035fb",
+   "metadata": {},
+   "source": [
+    "### Testing Models\n",
+    "\n",
+    "We will now set up our x and y data in order to feed them into our evaluations of various models."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 67,
    "id": "a2a3c568",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(955, 76)\n",
-      "Cross-validation accuracy: 63.56%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Start machine learning?\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "y_data = tournament_game_matchups['RESULT'].astype(int)\n",
-    "scaler = StandardScaler()\n",
-    "x_data = scaler.fit_transform(tournament_game_matchups.drop(['RESULT'],axis=1))\n",
-    "print(x_data.shape)\n",
+    "x_data = tournament_game_matchups.drop(['RESULT'],axis=1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d0fb583d",
+   "metadata": {},
+   "source": [
+    "### Decision Tree Classifier\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x_data, y_data, test_size=0.20)\n",
-    "\n",
-    "lr = LogisticRegression(max_iter=5000)\n",
-    "lr.fit(x_data, y_data)\n",
-    "cv_scores = cross_val_score(lr, x_data, y_data, cv=5)\n",
-    "\n",
-    "print(\"Cross-validation accuracy: {:.2f}%\".format(cv_scores.mean() * 100))"
+    "We begin with a decision tree classifier, where we hyper-tune our model with pca n-components, class_weight, max_depth, min_samples_leaf and max_features. With our pipeline featuring scaling, pca, and finally our decision tree."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "id": "9e1647c8",
    "metadata": {},
    "outputs": [
@@ -897,8 +899,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'clf__class_weight': {0: 0.5710526315789474, 1: 0.42894736842105263}, 'clf__max_depth': 5, 'clf__max_features': 5, 'clf__min_samples_leaf': 15, 'pca__n_components': 5}\n",
-      "Accuracy: 66.28272251308901\n",
+      "{'clf__class_weight': {0: 0.5710526315789474, 1: 0.42894736842105263}, 'clf__max_depth': 5, 'clf__max_features': 15, 'clf__min_samples_leaf': 15, 'pca__n_components': 5}\n",
       "Accuracy: 62.30366492146597\n"
      ]
     }
@@ -907,10 +908,10 @@
     "# Confusion matrix stuff\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.metrics import  precision_recall_fscore_support\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import  precision_recall_fscore_support\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Create a decision tree classifier with the cost matrix\n",
@@ -935,33 +936,29 @@
     "grid_search = GridSearchCV(pipe, param_grid, cv=5)\n",
     "grid_search.fit(x_data, y_data)\n",
     "print(grid_search.best_params_)\n",
-    "print(\"Accuracy:\", grid_search.best_score_*100)\n",
+    "\n",
     "nested_score = cross_val_score(grid_search, x_data, y_data, cv=5)\n",
     "print(\"Accuracy:\", nested_score.mean()*100)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "b5f774ce",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9da14c04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 60.31413612565445\n"
-     ]
-    }
-   ],
    "source": [
-    "# Evaluating from grid search of decision tree\n",
-    "pca = PCA(n_components=5)\n",
-    "new_clf = DecisionTreeClassifier(class_weight={0: 0.47631578947368414, 1: 0.5236842105263159}, max_depth=10, max_features=10, min_samples_leaf=20)\n",
-    "final_model = make_pipeline(scaler, pca, new_clf).fit(x_data, y_data)\n",
+    "We see that our class weights are relatively equal, with the best max depth being 5, max features being 10, min samples to form a leaf being 15, and the best n_components to be 5. The cross validation score for our decision tree model is 62.3%"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1729d8f5",
+   "metadata": {},
+   "source": [
+    "### Random Forest\n",
     "\n",
-    "nested_score = cross_val_score(new_clf, x_data, y_data, cv=5)\n",
-    "print(\"Accuracy:\", nested_score.mean()*100)"
+    "We now will run Random Forest, where we will hyper-tune pca n_estimators, max_depth, min_samples_split, min_samples_leaf, max_features.  With our pipeline featuring scaling, pca, and finally our random forests."
    ]
   },
   {
@@ -1005,6 +1002,26 @@
     "cv_scores = cross_val_score(grid_search, x_data, y_data, cv=5)\n",
     "\n",
     "print(\"Cross-validation accuracy: {:.2f}%\".format(cv_scores.mean() * 100))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a78808ff",
+   "metadata": {},
+   "source": [
+    "The best parameters from our random forest hypertuning were a max_depth of 5, max_features with log2, min_samples to form a leaf of 4, min_samples_split of 2 and n_estimators of 100. Our cross validation accuracy was 64.29%."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "57081278",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression\n",
+    "\n",
+    "Next we try Logistic Regression, where we hypertune our parameters with penalty, C value, and solver."
    ]
   },
   {
@@ -1052,6 +1069,26 @@
     "\n",
     "cv_scores = cross_val_score(grid_search, x_data, y_data, cv=5)\n",
     "print(\"Cross-validation accuracy: {:.2f}%\".format(cv_scores.mean() * 100))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1be1a4ea",
+   "metadata": {},
+   "source": [
+    "As a result of hypertuning our logistic regression model, we find the best parameters listed above. It performed with an average accuracy of 68.27%."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d0493d1e",
+   "metadata": {},
+   "source": [
+    "### SVM\n",
+    "\n",
+    "Up next, we try using an SVM. We decided to hyper-tune our SVM with C value, kernel, degree, gamma, class_weight, max_iter and tol values. We see that this models performs with a accuracy of 68.27%."
    ]
   },
   {
@@ -1115,9 +1152,28 @@
     }
    ],
    "source": [
-    "# Perfrom 5-fold cross validation on the results of grid search\n",
     "cv_scores = cross_val_score(grid_search, x_data, y_data, cv=5)\n",
     "print(\"Cross-validation accuracy: {:.2f}%\".format(cv_scores.mean() * 100))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ea76286f",
+   "metadata": {},
+   "source": [
+    "As a result of hyper-tuning our SVM, we find that the best hyperparameters (although a lot are listed above). This model had a cross validation score of 60.94%"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e359a1c9",
+   "metadata": {},
+   "source": [
+    "### Neural Networks\n",
+    "\n",
+    "Next we try implementing a Neural Network, hypertuning it with pca n_components and NN hidden layer sizes, alpha value, activation type and max_iter."
    ]
   },
   {
@@ -1168,6 +1224,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8fb25fd7",
+   "metadata": {},
+   "source": [
+    "The result of our hypertuning is listed above, with the accuracy of our model being 67.54%."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "973fc9a1",
+   "metadata": {},
+   "source": [
+    "### KNN\n",
+    "\n",
+    "Lastly, we try KNN. We don't really see a KNN opportunity at face value, but we decided to give it a shot either way. Here we hypertune it somewhat simple, with pca n_components, n_neighnors, weights, and p value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "487b48c3",
@@ -1207,6 +1283,15 @@
     "\n",
     "cv_scores = cross_val_score(grid_search, x_data, y_data, cv=5)\n",
     "print(\"Cross-validation accuracy: {:.2f}%\".format(cv_scores.mean() * 100))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2b63c698",
+   "metadata": {},
+   "source": [
+    "The result of our hypertuning is listed about with the accuracy being below average, compared to the previous with an accuracy of 62.93%."
    ]
   },
   {
@@ -1781,9 +1866,8 @@
    "outputs": [],
    "source": [
     "# Use the trained model to make predictions on new data (X_test)\n",
-    "predictions = rfc.predict(march_madness_matchups.drop(['RESULT'],axis=1))\n",
-    "print(predictions)\n",
-    "march_madness_matchups['RESULT'] = predictions"
+    "predictions = rfc.predict(march_madness_matchups)\n",
+    "print(predictions)"
    ]
   }
  ],
