--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -1300,7 +1300,9 @@
    "id": "532a1105",
    "metadata": {},
    "source": [
-    "#### Selecting the best performing model"
+    "#### Selecting the best performing model\n",
+    "\n",
+    "Our best performing model was Logistic Regression, so we will use that to make our 2023 predictions."
    ]
   },
   {
@@ -1309,9 +1311,9 @@
    "id": "9f147d59",
    "metadata": {},
    "source": [
-    "#### Testing our model with the 2023 March Madness Tournament\n",
+    "### Testing our model with the 2023 March Madness Tournament\n",
     "\n",
-    "##### Now we will begin forming our predictive bracket using our model to determine outcomes. \n",
+    "Now we will begin forming our predictive bracket using our model to determine outcomes. \n",
     "\n",
     "The data provided for the 2023 tournament did not order the games as was in the previous tournaments game data was, so we had to take the 2023 Tournament Data csv and fix the ordering correctly to portray the first round matchups, this resulted in the 2023MarchMadnessTournament csv file.\n",
     "\n",
@@ -1712,7 +1714,7 @@
     "        march_madness_matchups.columns.values[i] = march_madness_matchups.columns.values[i].replace(\" (TEAM 2)\", \"\") + \" (TEAM 2)\"\n",
     "\n",
     "print(march_madness_matchups.columns)\n",
-    "print(march_madness_matchups.shape)\n"
+    "print(march_madness_matchups.shape)"
    ]
   },
   {
@@ -1818,33 +1820,52 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "121e73d1",
+   "metadata": {},
+   "source": [
+    "## Correct First Round Outcomes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
+   "id": "89aaf441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actual_outcomes = [0,0,0,1,0,0,0,1,1,1,0,0,0,0,0,0,0,1,0,0,1,0,1,0,0,0,0,0,0,0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "id": "2c6122b2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Ethan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-6 {color: black;background-color: white;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(C=0.001, solver=&#x27;liblinear&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(C=0.001, solver=&#x27;liblinear&#x27;)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression(C=0.001, solver='liblinear')"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Now our 2023 march madness bracket is assembled, lets make the first round predictions\n",
-    "rfc = RandomForestClassifier(max_depth= 5, max_features= 'log2', min_samples_leaf= 4, min_samples_split= 10, n_estimators= 100)\n",
+    "scaler = StandardScaler()\n",
+    "x_data = scaler.fit_transform(tournament_game_matchups.drop(['RESULT'],axis=1))\n",
+    "lgr = LogisticRegression(C=0.001, penalty=\"l2\", solver=\"liblinear\")\n",
     "\n",
     "# Train the model on your data (X_train and y_train)\n",
-    "rfc.fit(x_data, y_data)"
+    "lgr.fit(x_data, y_data)"
    ]
   },
   {
@@ -1860,14 +1881,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "790011cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score: 68.75%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Ethan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Use the trained model to make predictions on new data (X_test)\n",
+    "from sklearn.metrics import accuracy_score\n",
     "predictions = rfc.predict(march_madness_matchups)\n",
-    "print(predictions)"
+    "\n",
+    "acc_score = accuracy_score(actual_outcomes, predictions)\n",
+    "print(\"Accuracy score: {:.2f}%\".format(acc_score * 100))"
    ]
   }
  ],
