finished prediction actual

--- a/predictor.ipynb
+++ b/predictor.ipynb
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "id": "790011cd",
    "metadata": {},
    "outputs": [
@@ -1889,21 +1889,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score: 68.75%\n"
+      "Accuracy score: 53.12%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Ethan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:432: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
+      "c:\\Users\\Ethan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:432: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "predictions = rfc.predict(march_madness_matchups)\n",
+    "predictions = lgr.predict(march_madness_matchups)\n",
     "\n",
     "acc_score = accuracy_score(actual_outcomes, predictions)\n",
     "print(\"Accuracy score: {:.2f}%\".format(acc_score * 100))"
